<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">letters to crushes</string>
    <string name="action_settings">Settings</string>    
    <string name="title_home">home</string>
    <string name="title_more">more</string>
    <string name="title_bookmarks">bookmarks</string>
    <string name="title_search">search</string>
    <string name="title_send">send</string>
    <string-array name="action_list">
        <item>home</item>
        <item>more</item>
        <item>bookmarks</item>
        <item>search</item>
        <item>send</item>
    </string-array>
</resources>
