<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/action_more"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/title_more"/>        
    <item
        android:id="@+id/action_bookmarks"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/title_bookmarks"/> 
    <item
        android:id="@+id/action_search"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/title_search"/>                 
    <item
        android:id="@+id/action_send"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/title_send"/>                 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
